src/test/resources/fixtures/security/str-shuffle.php
<?php

    <error descr="Insufficient entropy, random_int/random_bytes based solution would be more secure.">str_shuffle</error> ('');